<resources>
    <string name="app_name">Task</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="logo">Login Logo</string>
    <string name="newlogo">New signup Logo</string>

    <string name="captcha">Image For Captcha</string>
    <string name="captcha_space">Enter Above Captcha</string>
    <string name="login">Login</string>
    <string name="bold">bold</string>
    <string name="new_user">New User Click Here</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>