<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F4F6"
    android:gravity="center"
    android:onClick="newUser"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Logo -->

    <!-- User ID EditText -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="101dp"
        android:layout_height="67dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/logo"
        android:src="@mipmap/login" />

    <EditText
        android:id="@+id/editTextUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:autofillHints="User Id"
        android:background="@drawable/edittextcss"
        android:hint="@string/user_id"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#333333"
        android:textSize="24sp" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:autofillHints="Password"
        android:background="@drawable/edittextcss"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#333333"
        android:textSize="24sp" />

    <!-- Captcha Display -->
    <TextView
        android:id="@+id/textViewcaptcha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:background="#BABADA"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:textColor="#333333"
        android:textSize="34sp" />

    <!-- Captcha EditText -->
    <EditText
        android:id="@+id/editTextCaptcha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:autofillHints="text"
        android:background="@drawable/edittextcss"
        android:hint="@string/captcha_space"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="#333333"
        android:textSize="24sp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@color/purple_500"
        android:enabled="false"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewNewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/new_user"
        android:textSize="20sp"
        android:background="@drawable/edittextcss"
        android:textColor="#333333"

        />


</LinearLayout>
